# octowalrus

./: .env.example  .tool-versions  Dockerfile  README.md  Tiltfile  justfile  pyproject.toml
.github/workflows/: ci.yml
manifests/: Chart.yaml  values-dev.yaml  values.yaml
manifests/templates/: _helpers.tpl  deployment.yaml  minio-deployment.yaml  minio-pvc.yaml  minio-service.yaml
src/: __init__.py  main.py  routes.py
src/api/: example.py  example_test.py  health.py  health_test.py  importer.py
src/core/: __init__.py  logging.py  settings.py
src/services/: __init__.py  example_service.py  file_service.py  git.py
